// User service proto file.

syntax = "proto3";


package user;

option go_package = "github.com/iamvasanth07/showcase/common/protos/user";


// User service definition.
service UserService {
  rpc Get (GetUserRequest) returns (GetUserResponse) {}
  rpc GetAll (GetAllUserRequest) returns (GetAllUserResponse) {}
  rpc Create (CreateUserRequest) returns (CreateUserResponse) {}
  rpc Update (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc Delete (DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

// The request message containing the user's id.
message GetUserRequest {
  string id = 1;
}

// The response message containing the user.
message GetUserResponse {
    User user = 1;
}

// Get All User Request
message GetAllUserRequest {
    Pagination paginate = 1;
}

// The response message containing the list of user.
message GetAllUserResponse {
    repeated User users = 1;
    Metadata metadata = 2;
}

// The request message containing the user.
message CreateUserRequest {
    User user = 1;
}

// The response message containing the user.
message CreateUserResponse {
    User user = 1;
}

// The request message containing the user.
message UpdateUserRequest {
    User user = 1;
    string id = 2;
}

// The response message containing the user.
message UpdateUserResponse {
    User user = 1;
}

// The request message containing the user's id.
message DeleteUserRequest {
  string id = 1;
}

// The response message containing the user's id.
message DeleteUserResponse {
  string id = 1;
}

// User message.
message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string username = 4;
  string email = 5;
  string password = 6;
  string phone = 7;
}

//pagination
message Pagination {
  int32 page = 1;
  int32 limit = 2;
}

// Metadata message.
message Metadata {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}






